--- a/Resources/DesktopModules/Admin/Console/App_LocalResources/Settings.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Console/App_LocalResources/Settings.ascx.nl-NL.resx
@@ -12,20 +12,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AllowResize.Help" lastModified="2015-12-30 09:56:34">
+  <data name="AllowResize.Help" lastModified="2015-12-30 08:56:34">
     <value xml:space="preserve">Selecteer deze optie toe te staan dat gebruikers de grootte van de iconen kunnen aanpassen.</value>
   </data>
-  <data name="AllowResize.Text">
-    <value xml:space="preserve">Icoon Grootte Aanpassen Toestaan</value>
+  <data name="AllowResize.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Icoongrootte aanpassen toestaan</value>
   </data>
   <data name="AllowViewChange.Help">
     <value xml:space="preserve">Het switchen tussen de gedetailleerde en simpele weergave toestaan.</value>
   </data>
-  <data name="AllowViewChange.Text">
-    <value xml:space="preserve">Veranderen Weergave Toestaan</value>
+  <data name="AllowViewChange.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Wijzigen weergave toestaan</value>
   </data>
-  <data name="ConsoleWidth.Help">
-    <value xml:space="preserve">Deze waarde leeg laten om de iconen horizontaal te laten uitbreiden. Stel deze waarde in om de breedte van het console te minimaliseren. B.v.,  stel deze waarde in op 400 voor 2 kolommen met iconen.</value>
+  <data name="ConsoleWidth.Help" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Deze waarde leeg laten om de iconen horizontaal te laten uitbreiden. Stel deze waarde in om de breedte van het console te minimaliseren. Voorbeeld: stel deze waarde in op 400 voor 2 kolommen met iconen.</value>
   </data>
   <data name="ConsoleWidth.Text">
     <value xml:space="preserve">Breedte</value>
@@ -42,8 +42,8 @@
   <data name="DefaultView.Help">
     <value xml:space="preserve">Bepaal de standaard weergave. Simpele weergave zal iconen tonen met een de pagina beschrijving als tooltip. Gedetailleerde weergave zal een lijst met beschrijvingen voor elk item tonen.</value>
   </data>
-  <data name="DefaultView.Text">
-    <value xml:space="preserve">Standaard Weergave</value>
+  <data name="DefaultView.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Standaardweergave</value>
   </data>
   <data name="Friends.Text">
     <value xml:space="preserve">Vrienden</value>
@@ -51,29 +51,29 @@
   <data name="Group.Text">
     <value xml:space="preserve">Groep</value>
   </data>
-  <data name="Hide.Text">
-    <value xml:space="preserve">Simpele View</value>
+  <data name="Hide.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Eenvoudige weergave</value>
   </data>
   <data name="IconFile.Text">
     <value xml:space="preserve">Kleine iconen (16px)</value>
   </data>
-  <data name="IconFileLarge.Text">
-    <value xml:space="preserve">Grootte iconen (32px)</value>
+  <data name="IconFileLarge.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Grote iconen (32px)</value>
   </data>
   <data name="IconNone.Text">
     <value xml:space="preserve">Geen iconen</value>
   </data>
-  <data name="IncludeHiddenPages.Help" lastModified="2015-12-30 11:21:06">
-    <value xml:space="preserve">Selecteer deze optie om niet zichtbare pagina's mee te nemen in de weergave.</value>
+  <data name="IncludeHiddenPages.Help" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Selecteer deze optie om niet zichtbare pagina's op te nemen in de weergave.</value>
   </data>
   <data name="IncludeHiddenPages.Text">
     <value xml:space="preserve">Verborgen pagina's meenemen</value>
   </data>
-  <data name="IncludeParent.Help">
-    <value xml:space="preserve">Schakel dit selectievakje in om ook de bovenliggende pagina.</value>
+  <data name="IncludeParent.Help" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Schakel dit selectievakje in om ook de bovenliggende pagina mee te nemen in de weergave.</value>
   </data>
-  <data name="IncludeParent.Text">
-    <value xml:space="preserve">Bovenliggende omvatten</value>
+  <data name="IncludeParent.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Bovenliggende meenemen</value>
   </data>
   <data name="Members.Text">
     <value xml:space="preserve">Leden</value>
@@ -84,29 +84,44 @@
   <data name="Mode.Text">
     <value xml:space="preserve">Modus</value>
   </data>
-  <data name="ModuleHelp.Text">
-    <value xml:space="preserve">&lt;p&gt;De console module toont kind pagina's als pictogrammen en links, of categorieën om te helpen bij de navigatie.  De console-module heeft 4 verschillende weergavemodi: &lt;ul&gt;&lt;li&gt;kleine pictogrammen met details als knopinfo (kleine pictogrammen, eenvoudige weergave)&lt;/li&gt; &lt;li&gt;grote pictogrammen details als knopinfo (grote pictogrammen, eenvoudige weergave)&lt;/li&gt; &lt;li&gt;kleine pictogrammen lijst met details (kleine pictogrammen, detailweergave)&lt;/li&gt; &lt;li&gt;groot pictogram lijst met details (grote pictogrammen, detailweergave)&lt;/li&gt;&lt;/ul&gt;&lt;/P&gt; &lt;h3&gt;pagina-instellingen hangt af van de console-module:&lt;/h3&gt; &lt;table cellpadding="4" border="1" style="border:solid 1px #dcdcdc;border-collapse:collapse;"&gt; &lt;tr&gt;&lt;td nowrap="nowrap"&gt; Paginanaam&lt;/td&gt; &lt;td&gt;de paginanaam wordt weergegeven als de link titel.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; Paginabeschrijving&lt;/td&gt; &lt;td&gt;Beschrijving van de pagina wordt weergegeven als de tooltip of detail.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; handicap&lt;/td&gt; &lt;td&gt;categorie titels worden weergegeven als de pagina heeft 'Handicap' gecontroleerd. Onderliggende pagina's van de handicap pagina getoond onder de titel.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; Pictogrambestand&lt;/td&gt; &lt;td&gt;Dit pictogram wordt gebruikt in kleine pictogram weergaven.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; Groot pictogrambestand&lt;/td&gt; &lt;td&gt;Dit pictogram wordt gebruikt in grote pictogram weergaven.&lt;/td&gt;&lt;/tr&gt;
-&lt;/table&gt; &lt;i&gt;Tip: 'Include in menu' instelling zal verbergen pagina's uit het menu, maar niet het console.&lt;/i&gt; &lt; br / &gt; &lt; br / &gt; &lt;h3&gt;Console Module-instellingen&lt;/h3&gt; &lt;table cellpadding="4" border="1" style="border:solid 1px #dcdcdc;border-collapse:collapse;"&gt; &lt;tr&gt;&lt;td nowrap="nowrap"&gt; Toon kinderen van&lt;/td&gt; &lt;td&gt;als u een pagina alle onderliggende pagina's van die pagina wordt weergegeven. Laat dit veld leeg om alle onderliggende pagina's voor de huidige pagina worden weergegeven.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; standaard pictogramgrootte&lt;/td&gt; &lt;td&gt;bepaalt de pictogramgrootte.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; toestaan pictogram resize&lt;/td&gt; &lt;td&gt;kan de gebruiker het formaat van de pictogrammen wijzigen.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; standaardweergave&lt;/td&gt; &lt;td&gt;bepaalt de standaardweergave. Eenvoudige weergave weergegeven pictogrammen met paginabeschrijvingen als knopinfo. Gedetailleerde weergave toont een lijst met beschrijvingen voor elk item.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; toestaan weergave wijzigen&lt;/td&gt; &lt;td&gt;kan de gebruiker schakelen tussen weergaven van gedetailleerde en eenvoudige.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; Toon tooltip&lt;/td&gt; &lt;td&gt;Toon een tooltip met gedetailleerde beschrijving wanneer zweefde over pictogrammen in de eenvoudige weergave.&lt;/td&gt;&lt;/tr&gt;
-&lt;tr&gt;&lt;td nowrap="nowrap"&gt; breedte&lt;/td&gt; &lt;td&gt;laat deze waarde leeg om de pictogrammen te breiden horizontaal. Stel deze waarde om de breedte van de console te minimaliseren. Deze waarde bijvoorbeeld instelt op 400 voor 2 kolommen van pictogrammen.&lt;/td&gt;&lt;/tr&gt;
-&lt;/table&gt; &lt;i&gt;Tip: U kunt voorkomen dat gebruikers de indeling van de pagina wijzigen door het vinkje uit 'toestaan pictogram resize' en 'Toestaan weergavewijziging'.&lt;/i&gt;</value>
+  <data name="ModuleHelp.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">&lt;p&gt;The console module toont dochterpagina's als iconen en links, of als categorieën om te ondersteunen bij het navigeren. Deze module heeft vier verschillende weergavemodi:
+&lt;ul&gt;&lt;li&gt;kleine iconen met details als tooltip (Kleine iconen, Eenvouidige weergave)&lt;/li&gt;
+&lt;li&gt;grote iconen met details als tooltips (Grote Iconen, Eenvouidige weergave)&lt;/li&gt;
+&lt;li&gt;kleine iconen met details (Kleine iconen, Gedetailleeerde weergave)&lt;/li&gt;
+&lt;li&gt;grote iconen met details (Grote iconen, Gedetailleeerde weergave)&lt;/li&gt;
+&lt;/ul&gt;
+&lt;/p&gt;
+&lt;h3&gt;Pagina instellingen voor de module:&lt;/h3&gt;
+&lt;table cellpadding="4" border="1" style="border:solid 1px #dcdcdc;border-collapse:collapse;"&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Paginanaam&lt;/td&gt;&lt;td&gt;De paginanaam wordt getoond als de linktitel.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Paginabeschrijving&lt;/td&gt;&lt;td&gt;De paginabeschrijving wordt getoond als tooltip of detail.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Verborgen&lt;/td&gt;&lt;td&gt;Categorie titlels worden weergegeven wanneer de pagina het kenmerk 'Verborgen' heeft. Dochterpagina's van de uitgeschakelde pagina worden getoond onder de titel.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Iconen bestand&lt;/td&gt;&lt;td&gt;Dit bestand wordt gebruikt in de kleine iconen weergave.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Grote iconen bestand&lt;/td&gt;&lt;td&gt;Dit bestand wordt gebruikt in de grote iconen weergave.&lt;/td&gt;&lt;/tr&gt;
+&lt;/table&gt;
+&lt;i&gt;Tip: 'Weergeven in menu' instelling zal pagina's verbergen in het menu, maar niet de console..&lt;/i&gt;
+&lt;br /&gt;&lt;br /&gt;
+&lt;h3&gt;Console module instellingen&lt;/h3&gt;
+&lt;table cellpadding="4" border="1" style="border:solid 1px #dcdcdc;border-collapse:collapse;"&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Toon subpagina's van&lt;/td&gt;&lt;td&gt;Bij het selecteren van een pagina zullen alle dochterpagina's van de gekozen pagina getoond worden. Laat dit veld leeeg om alle subpagina's van deze pagina weer te geven.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Standaard icon grootte&lt;/td&gt;&lt;td&gt;Bepaalt de icongrootte.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Grootte wijzigen toestaan&lt;/td&gt;&lt;td&gt;Toestaan dat de gebruiker de grootte wijzigt.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Standaard weergave&lt;/td&gt;&lt;td&gt;Bepaalt de standaard weergave. Eenvoudige weergave zal de pagina iconen tonen met de paginabeschrijving als tooltip. Uitgebreide weergave zal een lijst met beschrijvingen tonen voor elk item.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Weergave wijzigen toestaan&lt;/td&gt;&lt;td&gt;Sta de gebruiker toe om te schakelen tussen eenvoudige en uitgebreide weergave.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Toon tooltip&lt;/td&gt;&lt;td&gt;Toon een tooltip met gedetailleerde beschrijving wanneer je met de muispijl over de icons gaat in de eenvoudige weergave.&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td nowrap="nowrap"&gt;Width&lt;/td&gt;&lt;td&gt;Laat dit veld leeg om toe te staan om iconen horizontaal uit te lijnen. Voer een pixel waarde in om de console breedte te beperken. Voorbeeld: Stel de waarde in op 400 om 2 kolommen met iconen te genereren.&lt;/td&gt;&lt;/tr&gt;
+&lt;/table&gt;
+&lt;i&gt;Tip: Je kunt voorkomen dat gebruiker de layout van de pagina wijziggen door deze opties uit te vinken: ''Icoongrootte aanpassen toestaan' en 'Weergave aanpassen toestaan'.&lt;/i&gt;</value>
   </data>
   <data name="Normal.Text">
     <value xml:space="preserve">Normaal</value>
   </data>
-  <data name="OrderTabsByHierarchy.Help">
-    <value xml:space="preserve">Door deze optie te selecteren zullen pagina's met dochter pagina's naar onderen worden geplaatst in de lijst. Dit wordt gedaan zodat pagina's met het zelfde niveau in het zelfde gebied worden weergegeven in de console module.</value>
+  <data name="OrderTabsByHierarchy.Help" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Door deze optie te selecteren zullen pagina's met onderliggende pagina's naar onderen worden geplaatst in de lijst. Dit wordt gedaan zodat pagina's met het zelfde niveau in het zelfde gebied worden weergegeven in de console module.</value>
   </data>
-  <data name="OrderTabsByHierarchy.Text">
-    <value xml:space="preserve">Rangschik Onderdelen op basis van hierargie</value>
+  <data name="OrderTabsByHierarchy.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Rangschik onderdelen op basis van hiërarchie</value>
   </data>
   <data name="Owner.Text">
     <value xml:space="preserve">Eigenaar</value>
@@ -114,8 +129,8 @@
   <data name="ParentTab.Help">
     <value xml:space="preserve">Een pagina selecteren betekent dat alle sub-pagina's voor de pagina zullen worden getoond. Laat dit veld leeg om alle sub-pagina's voor de huidige pagina te tonen. </value>
   </data>
-  <data name="ParentTab.Text">
-    <value xml:space="preserve">Toon sub-pagina's van</value>
+  <data name="ParentTab.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Toon subpagina's van</value>
   </data>
   <data name="Profile.Text">
     <value xml:space="preserve">Profiel</value>
@@ -123,17 +138,17 @@
   <data name="Show.Text">
     <value xml:space="preserve">Gedetailleerde Weergave</value>
   </data>
-  <data name="ShowTooltip.Help">
-    <value xml:space="preserve">Toon een tooltip met een gedetailleerde beschrijving in de Simpele weergave wanneer er gehoverd wordt over de iconen.</value>
+  <data name="ShowTooltip.Help" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Toon een tooltip met een gedetailleerde beschrijving in de simpele weergave wanneer de muispijl over de iconen bewogen wordt.</value>
   </data>
   <data name="ShowTooltip.Text">
     <value xml:space="preserve">Toon tooltip</value>
   </data>
-  <data name="tabsLabel.Help">
-    <value xml:space="preserve">U kunt de zichtbaarheid van afzonderlijke pagina's beheren.</value>
+  <data name="tabsLabel.Help" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Je kunt de zichtbaarheid van afzonderlijke pagina's beheren.</value>
   </data>
-  <data name="tabsLabel.Text">
-    <value xml:space="preserve">De instellingen van de zichtbaarheid van de pagina:</value>
+  <data name="tabsLabel.Text" lastModified="2020-05-15 19:41:05">
+    <value xml:space="preserve">Instellingen voor pagina zichtbaarheid</value>
   </data>
   <data name="User.Text">
     <value xml:space="preserve">Gebruiker</value>
