--- a/Resources/DesktopModules/Admin/Dnn.EditBar/App_LocalResources/editbar.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.EditBar/App_LocalResources/editbar.nl-NL.resx
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<root>  
+<root>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
@@ -7,12 +7,12 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PrivatePage.Text" xml:space="preserve">
-    <value>Prive pagina</value>
+  <data name="PrivatePage.Text" lastModified="2020-05-16 20:02:13">
+    <value xml:space="preserve">Privé pagina</value>
   </data>
 </root>
