--- a/Resources/DesktopModules/Admin/ModuleCreator/App_LocalResources/CreateModule.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/ModuleCreator/App_LocalResources/CreateModule.ascx.nl-NL.resx
@@ -15,61 +15,61 @@
   <data name="Add.Title">
     <value xml:space="preserve">Module constructeur</value>
   </data>
-  <data name="plOwner.Text">
-    <value xml:space="preserve">Eigenaar naam:</value>
-  </data>
-  <data name="plOwner.Help">
-    <value xml:space="preserve">Ontwikkelaars worden aangemoedigt om een unieke namespace te gebruiken voor hun modules om mogelijke conflicten met andere ontwikkelaars te voorkomen. Specificeer de naam van uw organisatie of bedrijf en deze zal worden gebruikt als een voorloper.</value>
-  </data>
-  <data name="plModule.Text">
-    <value xml:space="preserve">Module naam:</value>
-  </data>
-  <data name="plModule.Help">
-    <value xml:space="preserve">Voer een unieke naam in voor de module.</value>
-  </data>
-  <data name="plDescription.Text">
-    <value xml:space="preserve">Omschrijving:</value>
-  </data>
-  <data name="plDescription.Help">
-    <value xml:space="preserve">U kunt optioneel een omschrijving invoeren voor uw module.</value>
-  </data>
-  <data name="plLanguage.Text">
-    <value xml:space="preserve">Taal:</value>
-  </data>
-  <data name="plLanguage.Help">
-    <value xml:space="preserve">Selecteer de voorkeur taal voor het ontwikkelen van de module</value>
+  <data name="AlreadyExists.ErrorMessage">
+    <value xml:space="preserve">Er bestaat al een module met de opgegeven naam</value>
   </data>
   <data name="C#.Text">
     <value xml:space="preserve">C#</value>
   </data>
-  <data name="VB.Text">
-    <value xml:space="preserve">Visual Basic</value>
+  <data name="cmdCreate.Text">
+    <value xml:space="preserve">Module maken</value>
   </data>
-  <data name="plTemplate.Text">
-    <value xml:space="preserve">Template:</value>
-  </data>
-  <data name="plTemplate.Help">
-    <value xml:space="preserve">Selecteer uw voorkeurs module ontwikkelings template. Module ontwikkelings templates worden opgeslagen in de submap van de module binnen de host hoofdmap.</value>
-  </data>
-  <data name="plControl.Text">
-    <value xml:space="preserve">Control naam:</value>
+  <data name="InputValidation.ErrorMessage" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Je moet een eigenaar en modulenaam invoeren en een moduletemplate selecteren</value>
   </data>
   <data name="plControl.Help">
     <value xml:space="preserve">Vul een unieke naam in voor je module control.</value>
   </data>
-  <data name="cmdCreate.Text">
-    <value xml:space="preserve">Module maken</value>
+  <data name="plControl.Text" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Controlnaam:</value>
   </data>
-  <data name="InputValidation.ErrorMessage">
-    <value xml:space="preserve">U moet een eigenaar en module naam invoeren en een module template selecteren</value>
+  <data name="plDescription.Help" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Je kunt optioneel een omschrijving invoeren voor je module.</value>
   </data>
-  <data name="SuperUser.ErrorMessage">
-    <value xml:space="preserve">U moet een host gebruiker zijn om een nieuwe modules te kunnen aanmaken</value>
+  <data name="plDescription.Text">
+    <value xml:space="preserve">Omschrijving:</value>
   </data>
-  <data name="AlreadyExists.ErrorMessage">
-    <value xml:space="preserve">Er bestaat al een module met de opgegeven naam</value>
+  <data name="plLanguage.Help">
+    <value xml:space="preserve">Selecteer de voorkeur taal voor het ontwikkelen van de module</value>
+  </data>
+  <data name="plLanguage.Text">
+    <value xml:space="preserve">Taal:</value>
+  </data>
+  <data name="plModule.Help">
+    <value xml:space="preserve">Voer een unieke naam in voor de module.</value>
+  </data>
+  <data name="plModule.Text" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Modulenaam:</value>
+  </data>
+  <data name="plOwner.Help" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Ontwikkelaars worden aangemoedigd om een unieke namespace te gebruiken voor hun modules om mogelijke conflicten met andere ontwikkelaars te voorkomen. Specificeer de naam van je organisatie of bedrijf en deze zal worden gebruikt als een voorloper.</value>
+  </data>
+  <data name="plOwner.Text" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Eigenaarnaam:</value>
+  </data>
+  <data name="plTemplate.Help" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Selecteer je voorkeursmodule ontwikkelings templates. Module ontwikkelings templates worden opgeslagen in de submap van de module binnen de host hoofdmap.</value>
+  </data>
+  <data name="plTemplate.Text">
+    <value xml:space="preserve">Template:</value>
+  </data>
+  <data name="SuperUser.ErrorMessage" lastModified="2020-05-17 17:00:42">
+    <value xml:space="preserve">Je moet een host gebruiker zijn om een nieuwe modules te kunnen aanmaken</value>
   </data>
   <data name="TemplateProblem.ErrorMessage">
     <value xml:space="preserve">Er is een fout opgetreden bij het lezen van de geselecteerde module template bestanden</value>
+  </data>
+  <data name="VB.Text">
+    <value xml:space="preserve">Visual Basic</value>
   </data>
 </root>
