--- a/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/SearchResults.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/SearchResults.ascx.nl-NL.resx
@@ -12,77 +12,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddTag.Text">
+    <value xml:space="preserve">Tag toevoegen</value>
+  </data>
   <data name="Advanced.Text">
-    <value xml:space="preserve">Geavanceerd</value>
-  </data>
-  <data name="Date.Text">
-    <value xml:space="preserve">Datum</value>
-  </data>
-  <data name="lblAdvancedDates.Help">
-    <value xml:space="preserve">Beperk de zoekresultaten die zijn bewerkt binnen een specifieke tijd
-</value>
-  </data>
-  <data name="lblAdvancedDates.Text">
-    <value xml:space="preserve">laatst aangepast:</value>
-  </data>
-  <data name="lblAdvancedScope.Help">
-    <value xml:space="preserve">Begrens de zoekresultaten van een specifieke bron</value>
-  </data>
-  <data name="lblAdvancedScope.Text">
-    <value xml:space="preserve">Filter:</value>
-  </data>
-  <data name="lblAdvancedTags.Help">
-    <value xml:space="preserve">Begrens de zoekresultaten door middel van een specifieke tag</value>
-  </data>
-  <data name="lblAdvancedTags.Text">
-    <value xml:space="preserve">Filter op tags:</value>
-  </data>
-  <data name="NoResults.Text">
-    <value xml:space="preserve">Er zijn geen resultaten gevonden</value>
-  </data>
-  <data name="optionAll.Text">
-    <value xml:space="preserve">Alle</value>
-  </data>
-  <data name="optionDay.Text">
-    <value xml:space="preserve">1 dag</value>
-  </data>
-  <data name="optionMonth.Text">
-    <value xml:space="preserve">30 dagen</value>
-  </data>
-  <data name="optionQuarter.Text">
-    <value xml:space="preserve">90 dagen</value>
-  </data>
-  <data name="optionWeek.Text">
-    <value xml:space="preserve">7 dagen</value>
-  </data>
-  <data name="optionYear.Text">
-    <value xml:space="preserve">1 jaar</value>
-  </data>
-  <data name="Relevance.Text">
-    <value xml:space="preserve">Relevantie: </value>
-  </data>
-  <data name="ResultPerPage.Text">
-    <value xml:space="preserve">Resultaten per pagina:</value>
-  </data>
-  <data name="Source.Text">
-    <value xml:space="preserve">Bron:</value>
-  </data>
-  <data name="Tags.Text">
-    <value xml:space="preserve">Tags:</value>
-  </data>
-  <data name="btnClear.Text">
-    <value xml:space="preserve">Geavanceerd leegmaken</value>
-  </data>
-  <data name="btnSearch.Text">
-    <value xml:space="preserve">Zoeken</value>
-  </data>
-  <data name="lblAdvancedExactSearch.Help">
-    <value xml:space="preserve">Zoekresultaten moeten de exacte zoekwoorden bevatten</value>
-  </data>
-  <data name="lblAdvancedExactSearch.Text">
-    <value xml:space="preserve">Exact zoeken:</value>
-  </data>
-  <data name="linkAdvancedTip.Text">
     <value xml:space="preserve">Geavanceerd</value>
   </data>
   <data name="AdvancedSearchHint.Text">
@@ -154,34 +87,101 @@
                 &lt;/tr&gt;
             &lt;/table&gt;</value>
   </data>
-  <data name="LastModified.Text">
-    <value xml:space="preserve">Bijgewerkt:</value>
-  </data>
-  <data name="AddTag.Text">
-    <value xml:space="preserve">Tag toevoegen</value>
-  </data>
   <data name="AllFeaturesSelected.Text">
     <value xml:space="preserve">Alle geselecteerde functies</value>
   </data>
   <data name="Author.Text">
     <value xml:space="preserve">Auteur:</value>
   </data>
+  <data name="btnClear.Text">
+    <value xml:space="preserve">Geavanceerd leegmaken</value>
+  </data>
+  <data name="btnSearch.Text">
+    <value xml:space="preserve">Zoeken</value>
+  </data>
   <data name="Comments.Text">
     <value xml:space="preserve">Opmerkingen:</value>
-  </data>
-  <data name="Likes.Text">
-    <value xml:space="preserve">Vind ik leuk:</value>
-  </data>
-  <data name="Views.Text">
-    <value xml:space="preserve">Weergaves:</value>
   </data>
   <data name="CurrentPageIndex.Text">
     <value xml:space="preserve">Pagina:</value>
   </data>
-  <data name="ResultsCount.Text">
-    <value xml:space="preserve">Over {0} Resultaten</value>
+  <data name="Date.Text">
+    <value xml:space="preserve">Datum</value>
   </data>
   <data name="DefaultText.Text">
     <value xml:space="preserve">Zoekterm invoeren</value>
+  </data>
+  <data name="LastModified.Text">
+    <value xml:space="preserve">Bijgewerkt:</value>
+  </data>
+  <data name="lblAdvancedDates.Help">
+    <value xml:space="preserve">Beperk de zoekresultaten die zijn bewerkt binnen een specifieke tijd
+</value>
+  </data>
+  <data name="lblAdvancedDates.Text">
+    <value xml:space="preserve">laatst aangepast:</value>
+  </data>
+  <data name="lblAdvancedExactSearch.Help">
+    <value xml:space="preserve">Zoekresultaten moeten de exacte zoekwoorden bevatten</value>
+  </data>
+  <data name="lblAdvancedExactSearch.Text">
+    <value xml:space="preserve">Exact zoeken:</value>
+  </data>
+  <data name="lblAdvancedScope.Help">
+    <value xml:space="preserve">Begrens de zoekresultaten van een specifieke bron</value>
+  </data>
+  <data name="lblAdvancedScope.Text">
+    <value xml:space="preserve">Filter:</value>
+  </data>
+  <data name="lblAdvancedTags.Help">
+    <value xml:space="preserve">Begrens de zoekresultaten door middel van een specifieke tag</value>
+  </data>
+  <data name="lblAdvancedTags.Text">
+    <value xml:space="preserve">Filter op tags:</value>
+  </data>
+  <data name="Likes.Text">
+    <value xml:space="preserve">Vind ik leuk:</value>
+  </data>
+  <data name="linkAdvancedTip.Text">
+    <value xml:space="preserve">Geavanceerd</value>
+  </data>
+  <data name="NoResults.Text">
+    <value xml:space="preserve">Er zijn geen resultaten gevonden</value>
+  </data>
+  <data name="optionAll.Text">
+    <value xml:space="preserve">Alle</value>
+  </data>
+  <data name="optionDay.Text">
+    <value xml:space="preserve">1 dag</value>
+  </data>
+  <data name="optionMonth.Text">
+    <value xml:space="preserve">30 dagen</value>
+  </data>
+  <data name="optionQuarter.Text">
+    <value xml:space="preserve">90 dagen</value>
+  </data>
+  <data name="optionWeek.Text">
+    <value xml:space="preserve">7 dagen</value>
+  </data>
+  <data name="optionYear.Text">
+    <value xml:space="preserve">1 jaar</value>
+  </data>
+  <data name="Relevance.Text">
+    <value xml:space="preserve">Relevantie: </value>
+  </data>
+  <data name="ResultPerPage.Text">
+    <value xml:space="preserve">Resultaten per pagina:</value>
+  </data>
+  <data name="ResultsCount.Text" lastModified="2020-05-17 17:38:46">
+    <value xml:space="preserve">Ongeveer {0} resultaten</value>
+  </data>
+  <data name="Source.Text">
+    <value xml:space="preserve">Bron:</value>
+  </data>
+  <data name="Tags.Text">
+    <value xml:space="preserve">Tags:</value>
+  </data>
+  <data name="Views.Text" lastModified="2020-05-17 17:38:46">
+    <value xml:space="preserve">Weergaven:</value>
   </data>
 </root>
