--- a/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/SearchableModules.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/SearchableModules.nl-NL.resx
@@ -30,16 +30,16 @@
   <data name="Module_Events.Text">
     <value xml:space="preserve">Gebeurtenissen</value>
   </data>
+  <data name="Module_Group Directory.Text">
+    <value xml:space="preserve">Groep map</value>
+  </data>
   <data name="Module_Ideas.Text">
     <value xml:space="preserve">Ideeën </value>
   </data>
   <data name="Module_Journal.Text">
     <value xml:space="preserve">Dagboek</value>
   </data>
-  <data name="Module_Text/HTML.Text">
-    <value xml:space="preserve">pagina</value>
-  </data>
-  <data name="Module_Group Directory.Text">
-    <value>Groep map</value>
+  <data name="Module_Text/HTML.Text" lastModified="2020-05-17 17:37:30">
+    <value xml:space="preserve">Pagina's</value>
   </data>
 </root>
