--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/EditRoles.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/EditRoles.ascx.nl-NL.resx
@@ -15,8 +15,8 @@
   <data name="AdvancedSettings.Text">
     <value xml:space="preserve">Geavanceerde instellingen</value>
   </data>
-  <data name="AdvancedSettingsHelp.Text">
-    <value xml:space="preserve">In deze sectie kunt u geavanceerde instellingen voor deze rol doen.</value>
+  <data name="AdvancedSettingsHelp.Text" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">In deze sectie kun je geavanceerde instellingen voor deze rol doen.</value>
   </data>
   <data name="AssignToExistUsers.Help">
     <value xml:space="preserve">Koppel deze rol aan alle bestaande gebruikers.</value>
@@ -24,17 +24,17 @@
   <data name="AssignToExistUsers.Text">
     <value xml:space="preserve">Koppel aan alle bestaande gebruikers:</value>
   </data>
-  <data name="AutoAssignment.Help" lastModified="2015-12-31 10:26:49">
+  <data name="AutoAssignment.Help" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Wordt deze rol automatisch toegekend aan gebruikers</value>
   </data>
-  <data name="AutoAssignment.Text" lastModified="2015-12-31 10:26:49">
+  <data name="AutoAssignment.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Automatische toekenning</value>
   </data>
   <data name="BasicSettings.Text">
     <value xml:space="preserve">Basis Instellingen</value>
   </data>
-  <data name="BasicSettingsDescription.Text" lastModified="2015-12-31 10:26:49">
-    <value xml:space="preserve">In deze sectie kunt u de basis instellingen voor deze rol doen.</value>
+  <data name="BasicSettingsDescription.Text" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">In deze sectie kun je de basis instellingen voor deze rol doen.</value>
   </data>
   <data name="BillingPeriod.Help">
     <value xml:space="preserve">Deze twee velden worden samen gebruikt om een periode voor de facturering in te vullen. Bijvoorbeeld 2 weken of 1 maand</value>
@@ -48,17 +48,17 @@
   <data name="ControlTitle_edit.Text">
     <value xml:space="preserve">Bewerk toegangsrollen</value>
   </data>
-  <data name="Description.Help" lastModified="2015-12-31 10:26:49">
+  <data name="Description.Help" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Geef een omschrijving van de rol.</value>
   </data>
-  <data name="Description.Text" lastModified="2015-12-31 10:26:49">
+  <data name="Description.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Omschrijving:</value>
   </data>
-  <data name="DuplicateRole.Text" lastModified="2015-12-31 10:26:49">
+  <data name="DuplicateRole.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Er bestaat al een rol met dezelfde naam. De nieuwe rol is niet toegevoegd.</value>
   </data>
-  <data name="IncompatibleFee.Text" lastModified="2015-12-31 10:26:49">
-    <value xml:space="preserve">U moet een facturering frequentie selecteren als u wilt een vergoeding voor deze rol invoeren.</value>
+  <data name="IncompatibleFee.Text" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">Je moet een facturering frequentie selecteren als je een vergoeding voor deze rol wil invoeren.</value>
   </data>
   <data name="ModuleHelp.Text">
     <value xml:space="preserve">&lt;h1&gt;Over toegangsrollen&lt;/h1&gt;&lt;p&gt;Met behulp van deze module kunnen beheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, rollen kunnen worden verwijderd, en de toewijzing van rollen aan gebruikers kan worden beheerd.&lt;/p&gt;</value>
@@ -72,35 +72,35 @@
   <data name="plRoleGroups.Help">
     <value xml:space="preserve">Kies de rolgroep waartoe deze rol behoort.</value>
   </data>
-  <data name="plRoleGroups.Text" lastModified="2015-12-31 10:26:49">
+  <data name="plRoleGroups.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Rolgroep:</value>
   </data>
-  <data name="plRSVPCode.Help">
-    <value xml:space="preserve">Geef een r.s.v.p. (réspondez s'il vous plais) code op voor deze rol. Deze code kan gebruikt worden om gebruikers snel te laten inschrijven voor één of meerdere rollen.</value>
+  <data name="plRSVPCode.Help" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">Geef een RSVP-code op voor deze rol. Deze code kan gebruikt worden om gebruikers snel te laten inschrijven voor één of meerdere rollen.</value>
   </data>
   <data name="plRSVPCode.Text">
     <value xml:space="preserve">RSVP Code:</value>
   </data>
-  <data name="plRSVPLink.Help">
-    <value xml:space="preserve">Als er een RSVP code opgegeven is, dan kunt u de volgende URL gebruiken om aanmelding te vereenvoudigen</value>
+  <data name="plRSVPLink.Help" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">Als er een RSVP code opgegeven is, dan kun je de volgende URL gebruiken om aanmelding te vereenvoudigen</value>
   </data>
   <data name="plRSVPLink.Text">
     <value xml:space="preserve">RSVP Link:</value>
   </data>
-  <data name="ProcessorWarning.Text">
-    <value xml:space="preserve">&lt;b&gt;Waarschuwing:&lt;/b&gt; U moet eerst de betalingsverwerker onder "Website instellingen" instellen alvorens u gebruikers kan betaalde diensten kan aanbieden.</value>
+  <data name="ProcessorWarning.Text" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">&lt;b&gt;Waarschuwing:&lt;/b&gt; Je moet eerst de betalingsverwerker onder "Website instellingen" instellen alvorens je gebruikers betaalde diensten kunt aanbieden.</value>
   </data>
-  <data name="PublicRole.Help" lastModified="2015-12-31 10:26:49">
-    <value xml:space="preserve">Selecteer deze optie als gebruikers zich kunnen abboneren voor deze rol via de beheer services pagina binnen hun account.</value>
+  <data name="PublicRole.Help" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">Selecteer deze optie als gebruikers zich kunnen abonneren voor deze rol via de beheer services pagina binnen hun account.</value>
   </data>
-  <data name="PublicRole.Text" lastModified="2015-12-31 10:26:49">
+  <data name="PublicRole.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Publieke rol;</value>
   </data>
-  <data name="RoleName.Help" lastModified="2015-12-31 10:26:49">
+  <data name="RoleName.Help" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Geef de naam van de rol.</value>
   </data>
-  <data name="RoleName.Text">
-    <value xml:space="preserve">Naam Rol</value>
+  <data name="RoleName.Text" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">Rolnaam:</value>
   </data>
   <data name="securityModeListLabel.Help">
     <value xml:space="preserve">Kies de beveiligingsmodus voor deze rol/groep.</value>
@@ -114,7 +114,7 @@
   <data name="ServiceFee.Text">
     <value xml:space="preserve">Service tarief</value>
   </data>
-  <data name="statusListLabel.Help" lastModified="2015-12-31 10:26:49">
+  <data name="statusListLabel.Help" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">Selecteer de status voor deze rol/groep.</value>
   </data>
   <data name="statusListLabel.Text">
@@ -135,34 +135,34 @@
   <data name="TrialPeriod.Text">
     <value xml:space="preserve">Periode Facturering (elke)</value>
   </data>
-  <data name="valBillingPeriod1.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valBillingPeriod1.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Facturatieperiode is niet geldig.</value>
   </data>
-  <data name="valBillingPeriod2.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valBillingPeriod2.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Facturatieperiode moet groter zijn dan 0.</value>
   </data>
-  <data name="valRoleName.Text" lastModified="2015-12-31 10:26:49">
-    <value xml:space="preserve">&lt;br /&gt;U moet een geldige naam invullen.</value>
+  <data name="valRoleName.Text" lastModified="2020-05-17 17:46:49">
+    <value xml:space="preserve">&lt;br /&gt;Je moet een geldige naam invullen.</value>
   </data>
   <data name="valRoleName2.Text">
     <value xml:space="preserve">&lt;br /&gt;De naam is ongeldig - rollen kunnen alleen de volgende tekens bevatten: &amp; $ + , / ? ~ # &lt; &gt; ¿ ¡ « » !  . :  * ' [ ]</value>
   </data>
-  <data name="valServiceFee1.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valServiceFee1.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Servicekosten.</value>
   </data>
-  <data name="valServiceFee2.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valServiceFee2.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Servicekosten moeten groter dan of gelijk aan 0 zijn.</value>
   </data>
-  <data name="valTrialFee1.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valTrialFee1.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Probeervergoeding is niet geldig.</value>
   </data>
-  <data name="valTrialFee2.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valTrialFee2.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Probeervergoeding moeten groter dan of gelijk aan 0 zijn.</value>
   </data>
-  <data name="valTrialPeriod1.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valTrialPeriod1.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Probeerperiode is niet geldig.</value>
   </data>
-  <data name="valTrialPeriod2.Text" lastModified="2015-12-31 10:26:49">
+  <data name="valTrialPeriod2.Text" lastModified="2015-12-31 09:26:49">
     <value xml:space="preserve">&lt;br /&gt;Probeerperiode moet groter zijn dan 0.</value>
   </data>
 </root>
