--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/Membership.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/Membership.ascx.nl-NL.resx
@@ -12,56 +12,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Approved.Text">
-    <value xml:space="preserve">Geauthoriseerd:</value>
-  </data>
   <data name="Approved.Help">
     <value xml:space="preserve">Is de gebruiker geauthoriseerd voor de site.</value>
   </data>
-  <data name="CreatedDate.Text">
-    <value xml:space="preserve">Datum Aangemaakt:</value>
-  </data>
-  <data name="CreatedDate.Help">
-    <value xml:space="preserve">Datum van deze gebruiker is aangemaakt</value>
-  </data>
-  <data name="LastActivityDate.Text">
-    <value xml:space="preserve">Datum Laatste activiteit:</value>
-  </data>
-  <data name="LastActivityDate.Help">
-    <value xml:space="preserve">Datum van de laatste activiteit van deze gebruiker</value>
-  </data>
-  <data name="LastLoginDate.Text">
-    <value xml:space="preserve">Laatst ingelogd Datum:</value>
-  </data>
-  <data name="LastLoginDate.Help">
-    <value xml:space="preserve">Datum dat gebruiker voor het laatst is ingelogd</value>
-  </data>
-  <data name="LastPasswordChangeDate.Text">
-    <value xml:space="preserve">Laatste wachtwoord te wijzigen:</value>
-  </data>
-  <data name="LastPasswordChangeDate.Help">
-    <value xml:space="preserve">De datum waarop de gebruiker last changed zijn / haar wachtwoord</value>
-  </data>
-  <data name="LastLockoutDate.Text">
-    <value xml:space="preserve">Laatste Lock-out Datum:</value>
-  </data>
-  <data name="LastLockoutDate.Help">
-    <value xml:space="preserve">Datum dat deze gebruiker voor het laatst was buitengesloten, als gevolg van herhaalde mislukte logins</value>
-  </data>
-  <data name="IsOnLine.Text">
-    <value xml:space="preserve">Gebruiker is online:</value>
-  </data>
-  <data name="IsOnLine.Help">
-    <value xml:space="preserve">Is de gebruiker op dit moment online</value>
-  </data>
-  <data name="LockedOut.Text">
-    <value xml:space="preserve">Geblokkeerd:</value>
-  </data>
-  <data name="LockedOut.Help">
-    <value xml:space="preserve">Is de gebruiker geblokkeerd omdat er teveel mislukte login pogingen</value>
+  <data name="Approved.Text">
+    <value xml:space="preserve">Geauthoriseerd:</value>
   </data>
   <data name="cmdAuthorize.Text">
     <value xml:space="preserve">Gebruiker autoriseren</value>
+  </data>
+  <data name="cmdPassword.Text">
+    <value xml:space="preserve">Forceer wachtwoord wijziging</value>
   </data>
   <data name="cmdUnAuthorize.Text">
     <value xml:space="preserve">Gebruiker toegang ontzeggen</value>
@@ -69,20 +30,56 @@
   <data name="cmdUnLock.Text">
     <value xml:space="preserve">Account heropenen</value>
   </data>
-  <data name="UpdatePassword.Text">
-    <value xml:space="preserve">Wachtwoord Bijwerken:</value>
+  <data name="CreatedDate.Help">
+    <value xml:space="preserve">Datum van deze gebruiker is aangemaakt</value>
   </data>
-  <data name="UpdatePassword.Help">
-    <value xml:space="preserve">Dwingen deze gebruiker om hun wachtwoord bij te werken</value>
+  <data name="CreatedDate.Text">
+    <value xml:space="preserve">Datum Aangemaakt:</value>
   </data>
-  <data name="IsDeleted.Text">
-    <value xml:space="preserve">Verwijderd:</value>
+  <data name="DemoteFromSuperUser.Text">
+    <value xml:space="preserve">Maak normale gebruiker.</value>
   </data>
   <data name="IsDeleted.Help">
     <value xml:space="preserve">Is de gebruiker verwijderd</value>
   </data>
-  <data name="cmdPassword.Text">
-    <value xml:space="preserve">Forceer wachtwoord wijziging</value>
+  <data name="IsDeleted.Text">
+    <value xml:space="preserve">Verwijderd:</value>
+  </data>
+  <data name="IsOnLine.Help">
+    <value xml:space="preserve">Is de gebruiker op dit moment online</value>
+  </data>
+  <data name="IsOnLine.Text">
+    <value xml:space="preserve">Gebruiker is online:</value>
+  </data>
+  <data name="LastActivityDate.Help">
+    <value xml:space="preserve">Datum van de laatste activiteit van deze gebruiker</value>
+  </data>
+  <data name="LastActivityDate.Text">
+    <value xml:space="preserve">Datum Laatste activiteit:</value>
+  </data>
+  <data name="LastLockoutDate.Help">
+    <value xml:space="preserve">Datum dat deze gebruiker voor het laatst was buitengesloten, als gevolg van herhaalde mislukte logins</value>
+  </data>
+  <data name="LastLockoutDate.Text">
+    <value xml:space="preserve">Laatste Lock-out Datum:</value>
+  </data>
+  <data name="LastLoginDate.Help">
+    <value xml:space="preserve">Datum dat gebruiker voor het laatst is ingelogd</value>
+  </data>
+  <data name="LastLoginDate.Text">
+    <value xml:space="preserve">Laatst ingelogd Datum:</value>
+  </data>
+  <data name="LastPasswordChangeDate.Help">
+    <value xml:space="preserve">De datum waarop de gebruiker last changed zijn / haar wachtwoord</value>
+  </data>
+  <data name="LastPasswordChangeDate.Text" lastModified="2020-05-17 17:57:09">
+    <value xml:space="preserve">Laatste wachtwoord wijziging:</value>
+  </data>
+  <data name="LockedOut.Help">
+    <value xml:space="preserve">Is de gebruiker geblokkeerd omdat er teveel mislukte login pogingen</value>
+  </data>
+  <data name="LockedOut.Text">
+    <value xml:space="preserve">Geblokkeerd:</value>
   </data>
   <data name="Never.Text">
     <value xml:space="preserve">Nooit</value>
@@ -90,16 +87,19 @@
   <data name="OptionUnavailable.Text">
     <value xml:space="preserve">De functie voor het herstellen van het wachtwoord is op dit moment niet beschikbaar.</value>
   </data>
-  <data name="DemoteFromSuperUser.Text">
-    <value xml:space="preserve">Maak normale gebruiker.</value>
-  </data>
   <data name="PromoteToSuperUser.Text">
     <value xml:space="preserve">Maak Superuser.</value>
+  </data>
+  <data name="UpdatePassword.Help">
+    <value xml:space="preserve">Dwingen deze gebruiker om hun wachtwoord bij te werken</value>
+  </data>
+  <data name="UpdatePassword.Text">
+    <value xml:space="preserve">Wachtwoord Bijwerken:</value>
   </data>
   <data name="UserFolder.Help">
     <value xml:space="preserve">De map waarin de gegevens van de gebruikers worden opgeslagen.</value>
   </data>
-  <data name="UserFolder.Text">
-    <value xml:space="preserve">Gebruikers map</value>
+  <data name="UserFolder.Text" lastModified="2020-05-17 17:57:09">
+    <value xml:space="preserve">Gebruikersmap</value>
   </data>
 </root>
