--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/Password.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/Password.ascx.nl-NL.resx
@@ -12,115 +12,115 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PasswordTitle.Text">
-    <value xml:space="preserve">Manage Wachtwoord - {0} (Id: {1})</value>
+  <data name="AdminChangeHelp.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Om het wachtwoord voor deze gebruiker te veranderen voer je een nieuw wachtwoord in. Bebevestig dit door het nogmaals in te typen.</value>
   </data>
-  <data name="plOldPassword.Text">
-    <value xml:space="preserve">Huidig Wachtwoord:</value>
+  <data name="AdminResetHelp.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Je kunt het wachtwoord voor deze gebruiker resetten. Het wachtwoord zal automatisch naar de gebruiker worden gemaild. Deze e-mail  is 24 uur geldig.</value>
   </data>
-  <data name="plOldPassword.Help">
-    <value xml:space="preserve">Invoeren huidige Wachtwoord</value>
+  <data name="CannotChangePassword.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Je configuratie vereist dat de gebruiker een vraag en antwoord moet opgeven als wachtwoordherinnering. Als deze instelling aan staat zijn de beheerders van de site niet meer in de mogelijkheid om het wachtwoord te wijzigen, daarom is voor deze website deze functie uitgeschakeld.</value>
   </data>
-  <data name="plNewPassword.Text">
-    <value xml:space="preserve">Nieuwe Wachtwoord:</value>
-  </data>
-  <data name="plNewPassword.Help">
-    <value xml:space="preserve">Invoeren nieuw wachtwoord</value>
-  </data>
-  <data name="plNewConfirm.Text">
-    <value xml:space="preserve">Bevestig Wachtwoord:</value>
-  </data>
-  <data name="plNewConfirm.Help">
-    <value xml:space="preserve">Bevestig het nieuwe wachtwoord</value>
-  </data>
-  <data name="plQuestion.Text">
-    <value xml:space="preserve">Wachtwoord controle vraag:</value>
-  </data>
-  <data name="plQuestion.Help">
-    <value xml:space="preserve">De wachtwoord controle vraag zoals u die heeft opgegeven.</value>
-  </data>
-  <data name="plAnswer.Text">
-    <value xml:space="preserve">Antwoord</value>
-  </data>
-  <data name="plAnswer.Help">
-    <value xml:space="preserve">Geef het antwoord op de wachtwoord controle vraag</value>
-  </data>
-  <data name="plLastChanged.Text">
-    <value xml:space="preserve">Datum Laatste Wijziging Wachtwoord:</value>
-  </data>
-  <data name="plLastChanged.Help">
-    <value xml:space="preserve">Datum laatste wijziging Wachtwoord</value>
-  </data>
-  <data name="plExpires.Text">
-    <value xml:space="preserve">Wachtwoord Verloopt:</value>
-  </data>
-  <data name="plExpires.Help">
-    <value xml:space="preserve">Datum waarop het wachtwoord verloopt</value>
-  </data>
-  <data name="ChangePassword.Text">
-    <value xml:space="preserve">Verander Wachtwoord</value>
-  </data>
-  <data name="ResetPassword.Text">
-    <value xml:space="preserve">Verstuur wachtwoord-herstellink.</value>
+  <data name="ChangePassword.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Wijzig wachtwoord</value>
   </data>
   <data name="ChangeQA.Text">
     <value xml:space="preserve">Vraag en Antwoord bewerken</value>
   </data>
-  <data name="plEditQuestion.Text">
-    <value xml:space="preserve">Wachtwoord Vraag:</value>
-  </data>
-  <data name="plEditQuestion.Help">
-    <value xml:space="preserve">Geef de wachtwoord vraag op die u wilt gebruiken. Het zou iets moeten zijn waar alleen u het antwoord op weet.</value>
-  </data>
-  <data name="plEditAnswer.Text">
-    <value xml:space="preserve">Wachtwoord Antwoord:</value>
-  </data>
-  <data name="plEditAnswer.Help">
-    <value xml:space="preserve">Geef het antwoord op de wachtwoord vraag in.</value>
-  </data>
-  <data name="SaveQA.Text">
-    <value xml:space="preserve">Bewaren Wachtwoord Vraag/Antwoord</value>
-  </data>
-  <data name="UserChangeHelp.Text">
-    <value xml:space="preserve">Om uw wachtwoord te wijzigen moet u uw huidig wachtwoord en uw nieuwe wachtwoord invoeren. Vervolgens moet u uw nieuwe wachtwoord bevestigen.</value>
-  </data>
-  <data name="AdminChangeHelp.Text">
-    <value xml:space="preserve">Om het wachtwoord voor deze gebruiker te veranderen voert u een nieuw wachtwoord en bevestig dit door het nogmaals in te typen.</value>
-  </data>
-  <data name="AdminResetHelp.Text">
-    <value xml:space="preserve">U kunt het wachtwoord voor deze gebruiker resetten. Het wachtwoord zal automatisch naar de gebruiker worden gemaild. Deze E-mail 24 uur geldig.</value>
-  </data>
-  <data name="UserResetHelp.Text">
-    <value xml:space="preserve">U kunt uw wachtwoord laten resetten naar een automatisch willekeurig gegenereerd wachtwoord door antwoord te geven op de volgende wachtwoord vraag.</value>
-  </data>
-  <data name="QAHelp.Text">
-    <value xml:space="preserve">U kunt uw wachtwoord vraag en antwoord bijwerken. Voer uw huidig wachtwoord in en de vraag en het relevante antwoord, welke u wenst te gebruiken.</value>
-  </data>
-  <data name="plQAPassword.Text">
-    <value xml:space="preserve">Wachtwoord:</value>
-  </data>
-  <data name="plQAPassword.Help">
-    <value xml:space="preserve">Voer uw huidig wachtwoord in.</value>
+  <data name="ForcedExpiry.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">De website administrator heeft je gedwongen je wachtwoord te wijzigen voordat je kunt inloggen. Om dit te regelen hebben ze de optie "gedwongen nieuw wachtwoord" inselecteerd binnen je account. Deze stuurt een wachtwoordherstel token e-mail. Controleer je e-mail en gebruik de link in deze e-mail om je wachtwoord te wijzigen - Als je deze e-mail niet hebt ontvangen kunt je door op "Wachtwoord opvragen" een nieuwe e-mail laten versturen.</value>
   </data>
   <data name="NoExpiry.Text">
     <value xml:space="preserve">Wachtwoord verloopt niet</value>
   </data>
-  <data name="ForcedExpiry.Text">
-    <value xml:space="preserve">De website administrator heeft u gedwongen uw wachtwoord te wijzigen voordat u in kunt loggen. Om dit te regelen hebben ze de optie "gedwongen nieuw wachtwoord" inselecteerd binnen uw account, deze stuurt een wachtwoord reset token E-mail. Controleer uw E-mail en gebruik de link in deze E-mail om uw wachtwoord te wijzigen - Als u deze E-mail niet heeft ontvangen kunt u door op "Wachtwoord opvragen" een nieuwe E-mail laten versturen.</value>
-  </data>
-  <data name="CannotChangePassword.Text">
-    <value xml:space="preserve">Uw configuratie vereist dat de gebruiker een vraag en antwoord moet opgeven als wachtwoord herinnering. Als deze instelling aan staat zijn de beheerders van de site niet meer in de mogelijkheid om het wachtwoord te wijzigen, daarom is voor deze website deze functie uitgeschakeld.</value>
-  </data>
-  <data name="plResetToken.Help">
-    <value xml:space="preserve">Voer de herstel token in van de E-mail</value>
-  </data>
-  <data name="plResetToken.Text">
-    <value xml:space="preserve">Voer de herstel token in</value>
-  </data>
   <data name="OptionUnavailable.Text">
     <value xml:space="preserve">De functie voor het herstellen van het wachtwoord is op dit moment niet beschikbaar.</value>
   </data>
-  <data name="PasswordSent.Text">
-    <value xml:space="preserve">Als de gebruikersnaam die u heeft ingegeven correct is zal u binnen enkele ogenblikken een E-mail ontvangen met daarin een link waarmee u uw wachtwoord kan herstellen.</value>
+  <data name="PasswordSent.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Als de gebruikersnaam die je hebt ingegeven correct is zal je binnen enkele ogenblikken een e-mail ontvangen met daarin een link waarmee je je wachtwoord kan herstellen.</value>
+  </data>
+  <data name="PasswordTitle.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Beheer wachtwoord - {0} (Id: {1})</value>
+  </data>
+  <data name="plAnswer.Help" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Geef het antwoord op de wachtwoord controlevraag</value>
+  </data>
+  <data name="plAnswer.Text">
+    <value xml:space="preserve">Antwoord</value>
+  </data>
+  <data name="plEditAnswer.Help" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Geef het antwoord op de wachtwoordvraag in.</value>
+  </data>
+  <data name="plEditAnswer.Text">
+    <value xml:space="preserve">Wachtwoord Antwoord:</value>
+  </data>
+  <data name="plEditQuestion.Help" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Geef de wachtwoordvraag op die je wilt gebruiken. Het zou iets moeten zijn waar alleen jij het antwoord op weet.</value>
+  </data>
+  <data name="plEditQuestion.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Wachtwoordvraag:</value>
+  </data>
+  <data name="plExpires.Help">
+    <value xml:space="preserve">Datum waarop het wachtwoord verloopt</value>
+  </data>
+  <data name="plExpires.Text">
+    <value xml:space="preserve">Wachtwoord Verloopt:</value>
+  </data>
+  <data name="plLastChanged.Help">
+    <value xml:space="preserve">Datum laatste wijziging Wachtwoord</value>
+  </data>
+  <data name="plLastChanged.Text">
+    <value xml:space="preserve">Datum Laatste Wijziging Wachtwoord:</value>
+  </data>
+  <data name="plNewConfirm.Help">
+    <value xml:space="preserve">Bevestig het nieuwe wachtwoord</value>
+  </data>
+  <data name="plNewConfirm.Text">
+    <value xml:space="preserve">Bevestig Wachtwoord:</value>
+  </data>
+  <data name="plNewPassword.Help">
+    <value xml:space="preserve">Invoeren nieuw wachtwoord</value>
+  </data>
+  <data name="plNewPassword.Text">
+    <value xml:space="preserve">Nieuwe Wachtwoord:</value>
+  </data>
+  <data name="plOldPassword.Help">
+    <value xml:space="preserve">Invoeren huidige Wachtwoord</value>
+  </data>
+  <data name="plOldPassword.Text">
+    <value xml:space="preserve">Huidig Wachtwoord:</value>
+  </data>
+  <data name="plQAPassword.Help">
+    <value xml:space="preserve">Voer uw huidig wachtwoord in.</value>
+  </data>
+  <data name="plQAPassword.Text">
+    <value xml:space="preserve">Wachtwoord:</value>
+  </data>
+  <data name="plQuestion.Help" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">De wachtwoord controlevraag zoals je dat hebt opgegeven.</value>
+  </data>
+  <data name="plQuestion.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Wachtwoord controlevraag:</value>
+  </data>
+  <data name="plResetToken.Help" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Voer de herstel token in van de eE-mail</value>
+  </data>
+  <data name="plResetToken.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Voer de hersteltoken in</value>
+  </data>
+  <data name="QAHelp.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Je kunt je wachtwoordvraag en antwoord bijwerken. Voer je huidige wachtwoord in en de vraag en het relevante antwoord, dat je wilt gebruiken.</value>
+  </data>
+  <data name="ResetPassword.Text">
+    <value xml:space="preserve">Verstuur wachtwoord-herstellink.</value>
+  </data>
+  <data name="SaveQA.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Wachtwoord vraag/antwoord bewaren</value>
+  </data>
+  <data name="UserChangeHelp.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Om je wachtwoord te wijzigen moet je je huidige wachtwoord en je nieuwe wachtwoord invoeren. Vervolgens moet je je nieuwe wachtwoord bevestigen.</value>
+  </data>
+  <data name="UserResetHelp.Text" lastModified="2020-05-17 18:03:52">
+    <value xml:space="preserve">Je kunt je wachtwoord laten resetten naar een automatisch willekeurig gegenereerd wachtwoord door antwoord te geven op de volgende wachtwoordvraag.</value>
   </data>
 </root>
