--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/Roles.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/Roles.ascx.nl-NL.resx
@@ -12,55 +12,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Name.Header">
-    <value xml:space="preserve">Naam</value>
+  <data name="AddContent.Action">
+    <value xml:space="preserve">Nieuwe rol toevoegen</value>
   </data>
-  <data name="Description.Header">
-    <value xml:space="preserve">Omschrijving</value>
-  </data>
-  <data name="Fee.Header">
-    <value xml:space="preserve">Tarief</value>
-  </data>
-  <data name="Every.Header">
-    <value xml:space="preserve">Elke</value>
-  </data>
-  <data name="Period.Header">
-    <value xml:space="preserve">Periode</value>
-  </data>
-  <data name="Trial.Header">
-    <value xml:space="preserve">Probeer periode</value>
-  </data>
-  <data name="Public.Header">
-    <value xml:space="preserve">Publiek</value>
+  <data name="AddGroup.Action">
+    <value xml:space="preserve">Nieuwe rolgroep toevoegen</value>
   </data>
   <data name="Auto.Header">
     <value xml:space="preserve">Automatisch</value>
   </data>
-  <data name="AddContent.Action">
-    <value xml:space="preserve">Nieuwe rol toevoegen</value>
-  </data>
   <data name="ControlTitle_.Text">
     <value xml:space="preserve">Toegangsrollen</value>
   </data>
-  <data name="ModuleHelp.Text">
-    <value xml:space="preserve">Over toegangsrollenMet behulp van deze module kunnen beheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, rollen kunnen worden verwijderd, en de toewijzing van rollen aan gebruikers kan worden beheerd.</value>
+  <data name="Description.Header">
+    <value xml:space="preserve">Omschrijving</value>
+  </data>
+  <data name="Every.Header">
+    <value xml:space="preserve">Elke</value>
+  </data>
+  <data name="Fee.Header">
+    <value xml:space="preserve">Tarief</value>
+  </data>
+  <data name="ModuleHelp.Text" lastModified="2020-05-17 18:09:22">
+    <value xml:space="preserve">&lt;h1&gt;Over toegangsrollen&lt;/h1&gt;&lt;p&gt;Met behulp van deze module kunnen beheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, Rollen kunnen worden verwijderd en de toewijzing van rollen aan gebruikers kan worden beheerd.&lt;/p&gt;</value>
+  </data>
+  <data name="Name.Header">
+    <value xml:space="preserve">Naam</value>
+  </data>
+  <data name="Period.Header">
+    <value xml:space="preserve">Periode</value>
+  </data>
+  <data name="plRoleGroups.Help" lastModified="2020-05-17 18:09:22">
+    <value xml:space="preserve">Selecteer the rolgroep die je wilt bekijken</value>
   </data>
   <data name="plRoleGroups.Text">
     <value xml:space="preserve">Filter op rolgroep:</value>
   </data>
-  <data name="plRoleGroups.Help">
-    <value xml:space="preserve">Selecteer the rolgroep die u wilt bekijken</value>
+  <data name="Public.Header">
+    <value xml:space="preserve">Publiek</value>
   </data>
-  <data name="AddGroup.Action">
-    <value xml:space="preserve">Nieuwe rolgroep toevoegen</value>
+  <data name="Trial.Header">
+    <value xml:space="preserve">Probeer periode</value>
+  </data>
+  <data name="UserCount.Header">
+    <value xml:space="preserve">Gebruikers</value>
   </data>
   <data name="UserRoles.Text">
     <value xml:space="preserve">Beheer gebruikers</value>
   </data>
   <data name="UserSettings.Action">
     <value xml:space="preserve">Instellingen voor gebruikers</value>
-  </data>
-  <data name="UserCount.Header">
-    <value xml:space="preserve">Gebruikers</value>
   </data>
 </root>
