--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/SecurityRoles.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/SecurityRoles.ascx.nl-NL.resx
@@ -27,11 +27,11 @@
   <data name="ControlTitle_user roles.Text">
     <value xml:space="preserve">Gebruikersrol</value>
   </data>
-  <data name="DeleteRoleFromUser.Text">
-    <value xml:space="preserve">Weet u zeker dat u de '{1}' rol wilt verwijderen uit '{0}'?</value>
+  <data name="DeleteRoleFromUser.Text" lastModified="2020-05-17 18:10:54">
+    <value xml:space="preserve">Weet je zeker dat je de '{1}' rol wilt verwijderen uit '{0}'?</value>
   </data>
-  <data name="DeleteUsersFromRole.Text">
-    <value xml:space="preserve">Weet u zeker dat u '{0}' uit de rol '{1}' wilt verwijderen?</value>
+  <data name="DeleteUsersFromRole.Text" lastModified="2020-05-17 18:10:54">
+    <value xml:space="preserve">Weet je zeker dat je '{0}' uit de rol '{1}' wilt verwijderen?</value>
   </data>
   <data name="EffectiveDate.Header">
     <value xml:space="preserve">Ingangsdatum</value>
@@ -51,8 +51,8 @@
   <data name="ModuleHelp.Text">
     <value xml:space="preserve">&lt;h1&gt;Over toegangsrollen&lt;/h1&gt;&lt;p&gt;Met behulp van deze module kunnen beheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, rollen kunnen worden verwijderd, en de toewijzing van rollen aan gebruikers kan worden beheerd.&lt;/p&gt;</value>
   </data>
-  <data name="NotAuthorized.Text">
-    <value xml:space="preserve">U bent niet gemachtigd om deze rol te wijzigen.</value>
+  <data name="NotAuthorized.Text" lastModified="2020-05-17 18:10:54">
+    <value xml:space="preserve">Je bent niet gemachtigd om deze rol te wijzigen.</value>
   </data>
   <data name="plEffectiveDate.Help">
     <value xml:space="preserve">Geef de datum waarop deze roltoekenning in moet gaan (optioneel). Geen ingangsdatum betekent dat de rol onmiddellijk ingaat.</value>
@@ -60,34 +60,34 @@
   <data name="plEffectiveDate.Text">
     <value xml:space="preserve">Ingangsdatum</value>
   </data>
-  <data name="plExpiryDate.Help">
-    <value xml:space="preserve">Geef aan op welke datum deze roltoekening moet verlopen (dit is optioneel). Als u niets invult, zal de rol zijn geldigheid niet verliezen.</value>
+  <data name="plExpiryDate.Help" lastModified="2020-05-17 18:10:54">
+    <value xml:space="preserve">Geef aan op welke datum deze roltoekening moet verlopen (dit is optioneel). Als je niets invult, zal de rol zijn geldigheid niet verliezen.</value>
   </data>
   <data name="plExpiryDate.Text">
     <value xml:space="preserve">Vervaldatum</value>
   </data>
-  <data name="plRoles.Help" lastModified="2015-12-31 10:33:36">
+  <data name="plRoles.Help" lastModified="2015-12-31 09:33:36">
     <value xml:space="preserve">Selecteer de toegangsrol.</value>
   </data>
   <data name="plRoles.Text">
     <value xml:space="preserve">Toegangsrol</value>
   </data>
-  <data name="plUsers.Help" lastModified="2015-12-31 10:33:36">
+  <data name="plUsers.Help" lastModified="2015-12-31 09:33:36">
     <value xml:space="preserve">Voer de gebruikersnaam in en klik op "Valideren" om te bevestigen.</value>
   </data>
   <data name="plUsers.Text">
     <value xml:space="preserve">Gebruikersnaam</value>
   </data>
-  <data name="RoleRemoveError.Text" lastModified="2015-12-31 10:33:36">
+  <data name="RoleRemoveError.Text" lastModified="2015-12-31 09:33:36">
     <value xml:space="preserve">De rollen van "Websitebeheerder" en "Geregistreerde gebruiker" kunnen niet verwijderd worden.</value>
   </data>
-  <data name="RoleTitle.Text" lastModified="2015-12-31 10:33:36">
+  <data name="RoleTitle.Text" lastModified="2015-12-31 09:33:36">
     <value xml:space="preserve">Beheer gebruikers in rol: {0}</value>
   </data>
   <data name="SecurityRole.Header">
     <value xml:space="preserve">Toegangsrol</value>
   </data>
-  <data name="SendNotification.Text" lastModified="2015-12-31 10:33:36">
+  <data name="SendNotification.Text" lastModified="2015-12-31 09:33:36">
     <value xml:space="preserve">E-mail versturen</value>
   </data>
   <data name="UpdateRole.Text">
@@ -96,10 +96,10 @@
   <data name="UserName.Header">
     <value xml:space="preserve">Gebruikersnaam</value>
   </data>
-  <data name="UserTitle.Text" lastModified="2015-12-31 10:33:36">
+  <data name="UserTitle.Text" lastModified="2015-12-31 09:33:36">
     <value xml:space="preserve">Beheer rollen voor gebruiker:{0}</value>
   </data>
-  <data name="valDates.Text" lastModified="2015-12-31 10:33:36">
+  <data name="valDates.Text" lastModified="2015-12-31 09:33:36">
     <value xml:space="preserve">Vervaldatum moet groter zijn dan Ingangsdatum.</value>
   </data>
   <data name="valEffectiveDate.Text">
