--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/SharedResources.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/SharedResources.nl-NL.resx
@@ -12,43 +12,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="City.Help" lastModified="2015-12-31 10:34:51">
+  <data name="City.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Voer een stad of locatie in.</value>
   </data>
   <data name="City.Text">
     <value xml:space="preserve">Stad:</value>
   </data>
-  <data name="DisplayName.Help" lastModified="2015-12-31 10:34:51">
+  <data name="DisplayName.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Geef een weergavenaam op.</value>
   </data>
-  <data name="DisplayName.RegExError" lastModified="2015-12-31 10:34:51">
+  <data name="DisplayName.RegExError" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">De weergavenaam is ongeldig.</value>
   </data>
-  <data name="DisplayName.Required" lastModified="2015-12-31 10:34:51">
+  <data name="DisplayName.Required" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Weergavenaam is vereist.</value>
   </data>
   <data name="DisplayName.Text">
     <value xml:space="preserve">Naam weergeven:</value>
   </data>
-  <data name="Email.Help" lastModified="2015-12-31 10:34:51">
+  <data name="Email.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Voer een geldig e-mailadres in.</value>
   </data>
-  <data name="Email.RegExError" lastModified="2015-12-31 10:34:51">
-    <value xml:space="preserve">U moet een geldig e-mailadres invoeren.</value>
+  <data name="Email.RegExError" lastModified="2020-05-17 18:12:10">
+    <value xml:space="preserve">Je moet een geldig e-mailadres invoeren.</value>
   </data>
-  <data name="Email.Required" lastModified="2015-12-31 10:34:51">
+  <data name="Email.Required" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">E-mail adres is vereist.</value>
   </data>
   <data name="Email.Text">
     <value xml:space="preserve">E-mailadres:</value>
   </data>
-  <data name="FirstName.Help" lastModified="2015-12-31 10:34:51">
+  <data name="FirstName.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Voer een voornaam in.</value>
   </data>
-  <data name="FirstName.RegExError" lastModified="2015-12-31 10:34:51">
+  <data name="FirstName.RegExError" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Voornaam is ongeldig.</value>
   </data>
-  <data name="FirstName.Required" lastModified="2015-12-31 10:34:51">
+  <data name="FirstName.Required" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Voornaam is vereist.</value>
   </data>
   <data name="FirstName.Text">
@@ -60,7 +60,7 @@
   <data name="InvalidAnswer_Detail.Text">
     <value xml:space="preserve">Het gegeven antwoord was ongeldig.</value>
   </data>
-  <data name="InvalidPassword.Text" lastModified="2015-12-31 10:34:51">
+  <data name="InvalidPassword.Text" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Ongeldig wachtwoord.</value>
   </data>
   <data name="InvalidPassword_Detail.Text">
@@ -72,35 +72,35 @@
   <data name="InvalidQuestion_Detail.Text">
     <value xml:space="preserve">De opgegeven vraag is ongeldig.</value>
   </data>
-  <data name="LastName.Help" lastModified="2015-12-31 10:34:51">
+  <data name="LastName.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Voer een achternaam in.</value>
   </data>
-  <data name="LastName.RegExError" lastModified="2015-12-31 10:34:51">
+  <data name="LastName.RegExError" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Achternaam is ongeldig.</value>
   </data>
-  <data name="LastName.Required" lastModified="2015-12-31 10:34:51">
+  <data name="LastName.Required" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Achternaam is vereist.</value>
   </data>
   <data name="LastName.Text">
     <value xml:space="preserve">Achternaam:</value>
   </data>
-  <data name="Password.Help" lastModified="2015-12-31 10:34:51">
-    <value xml:space="preserve">Vul uw wachtwoord in.</value>
+  <data name="Password.Help" lastModified="2020-05-17 18:12:10">
+    <value xml:space="preserve">Vul je wachtwoord in.</value>
   </data>
-  <data name="Password.Required" lastModified="2015-12-31 10:34:51">
-    <value xml:space="preserve">U moet een wachtwoord opgeven.</value>
+  <data name="Password.Required" lastModified="2020-05-17 18:12:10">
+    <value xml:space="preserve">Je moet een wachtwoord opgeven.</value>
   </data>
-  <data name="PasswordAnswer.Help" lastModified="2015-12-31 10:34:51">
+  <data name="PasswordAnswer.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Geef een antwoord op de wachtwoord vraag.</value>
   </data>
   <data name="PasswordAnswer.Text">
     <value xml:space="preserve">Wachtwoord antwoord:</value>
   </data>
-  <data name="PasswordConfirm.Help" lastModified="2015-12-31 10:34:51">
+  <data name="PasswordConfirm.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Voer het wachtwoord ter verificatie opnieuw in.</value>
   </data>
-  <data name="PasswordConfirm.Required" lastModified="2015-12-31 10:34:51">
-    <value xml:space="preserve">U moet ter verificatie het wachtwoord nogmaals invoeren.</value>
+  <data name="PasswordConfirm.Required" lastModified="2020-05-17 18:12:10">
+    <value xml:space="preserve">Je moet ter verificatie het wachtwoord nogmaals invoeren.</value>
   </data>
   <data name="PasswordConfirm.Text">
     <value xml:space="preserve">Bevestig wachtwoord:</value>
@@ -111,11 +111,11 @@
   <data name="PasswordMismatch_Detail.Text">
     <value xml:space="preserve">Het wachtwoord en wachtwoord verificatie komen niet overeen.</value>
   </data>
-  <data name="PasswordQuestion.Help" lastModified="2015-12-31 10:34:51">
+  <data name="PasswordQuestion.Help" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Geef een wachtwoord vraag die gebruikt kan worden bij het opvragen van het wachtwoord.</value>
   </data>
-  <data name="PasswordQuestion.Text">
-    <value xml:space="preserve">Wachtwoord vraag:</value>
+  <data name="PasswordQuestion.Text" lastModified="2020-05-17 18:12:10">
+    <value xml:space="preserve">Wachtwoordvraag:</value>
   </data>
   <data name="PasswordReset.Text">
     <value xml:space="preserve">Het wachtwoord is hersteld.</value>
@@ -123,17 +123,17 @@
   <data name="Username.Help">
     <value xml:space="preserve">Voereen gebruikersnaam in. </value>
   </data>
-  <data name="Username.RegExError" lastModified="2015-12-31 10:34:51">
+  <data name="Username.RegExError" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">De ingevoerde gebruikersnaam is ongeldig.</value>
   </data>
-  <data name="Username.Required" lastModified="2015-12-31 10:34:51">
+  <data name="Username.Required" lastModified="2015-12-31 09:34:51">
     <value xml:space="preserve">Gebruikersnaam is vereist.</value>
   </data>
   <data name="Username.Text">
     <value xml:space="preserve">Gebruikersnaam:</value>
   </data>
-  <data name="VanityUrl.Help">
-    <value xml:space="preserve">U kunt optioneel kiezen voor een aangepaste URL voor uw profiel.</value>
+  <data name="VanityUrl.Help" lastModified="2020-05-17 18:12:10">
+    <value xml:space="preserve">Je kunt optioneel kiezen voor een aangepaste URL voor uw profiel.</value>
   </data>
   <data name="VanityUrl.Text">
     <value xml:space="preserve">Profiel URL:</value>
