--- a/Resources/DesktopModules/Admin/ViewProfile/App_LocalResources/ViewProfile.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/ViewProfile/App_LocalResources/ViewProfile.ascx.nl-NL.resx
@@ -15,15 +15,6 @@
   <data name="AboutMe.Text">
     <value xml:space="preserve">Over mij</value>
   </data>
-  <data name="EmptyAboutMe.Text">
-    <value xml:space="preserve"> Er is geen biografie informatie van deze gebruiker </value>
-  </data>
-  <data name="EmptyLocation.Text">
-    <value xml:space="preserve">Er is geen informatie over de locatie voor deze gebruiker</value>
-  </data>
-  <data name="EmptyGetInTouch.Text">
-    <value xml:space="preserve">Er is geen contact informatie van deze gebruiker</value>
-  </data>
   <data name="ControlTitle_viewprofile.Text">
     <value xml:space="preserve">Bekijk profiel</value>
   </data>
@@ -32,6 +23,15 @@
   </data>
   <data name="Email.Text">
     <value xml:space="preserve">E-mail</value>
+  </data>
+  <data name="EmptyAboutMe.Text" lastModified="2020-05-17 18:18:23">
+    <value xml:space="preserve">Er is geen biografie informatie van deze gebruiker </value>
+  </data>
+  <data name="EmptyGetInTouch.Text">
+    <value xml:space="preserve">Er is geen contact informatie van deze gebruiker</value>
+  </data>
+  <data name="EmptyLocation.Text">
+    <value xml:space="preserve">Er is geen informatie over de locatie voor deze gebruiker</value>
   </data>
   <data name="GetInTouch.Text">
     <value xml:space="preserve">Manieren om met mij in contact te komen</value>
